Added docker configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### Docker ###
+.env.compose
+
 # Created by https://www.toptal.com/developers/gitignore/api/linux,laravel,phpstorm
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,laravel,phpstorm
 
