--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ### Docker ###
+docker-compose.override.yml
 .env.compose
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,laravel,phpstorm
